tests/errors/compiler/pnt_before_array/pnt_before_array.c
int main() 
{
	int *arr[10];	
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}